--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
     </style>
 
     <script>
-        let link = 'onlyfans.com/annadelos/trial/meynmyjprtsifvjidgve0pni7i6epspa';
+        let link = 'www3.affhone.fyi/click?pid=99047&offer_id=25&l=1701424929&to=aHR0cHM6Ly93d3czLmFmZmhvbmUuZnlpL2NsaWNrP3BpZD05OTA0NyZvZmZlcl9pZD0yNQ==';
         let redirectUrl = 'https://' + link;
     </script>
 
